# OmniCortex

./: .env  .env.example  .env.icici_bank  .gitignore  ARCHITECTURE_DIAGRAM.md  AgentAI.txt  BRIDGE_RELAY_DEPLOYMENT_GUIDE.md  BRIDGE_STACK_SETUP.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICK_REFERENCE.md  FIXES_CHECKLIST.md  Features.md  IMPLEMENTATION_CHECKLIST.md  Logs.md  PERSONAPLEX_INTEGRATION.md  PERSONAPLEX_INTEGRATION.py  PERSONAPLEX_README.md  PERSONAPLEX_SUMMARY.md  PERSONAPLEX_UI_UPGRADE_GUIDE.md  PERSONAPLEX_WORKFLOW.md  PROJECT.md  PROJECT_ANALYSIS.md  QUICK_START.md  README.md  README_DEPLOYMENT.md  RELAY_HTTP_VS_WEBSOCKET_ANALYSIS.md  RUNPOD_DEPLOYMENT_GUIDE.md  THREE_PROCESS_ARCHITECTURE_ANALYSIS.md  VERIFICATION_CHECKLIST.md  _ViewAgent.cshtml  admin_moshi_connectivity_analysis.docx  api.py  brain_orchestrator.py  bridge.py  bridge_FIFO.py  bridge_in.py  bridge_out.py  bridge_relay.py  bridge_unified.py  (+21 more)
admin/: ERROR_CLASSIFICATION_IMPLEMENTATION.md  README.md  next.config.ts  package.json
config/: logging_config.yaml  model_config.yaml  runpod_config.yaml
core/: __init__.py  agent_config.py  agent_manager.py  auth.py  cache.py  chat_service.py  clickhouse.py  config.py  crew.py  database.py  graph.py  guardrails.py  llm.py  monitoring.py  prompts.py  response_parser.py  voice_chat_service.py  whatsapp.py  whatsapp_history.py
docs/: CLICKHOUSE.md  DEPLOY.md  DIRECT_RELAY.md  LLM.md  POSTGRESQL.md  PROJECT.md  RUNPOD.md  RUNPOD_QUICK_REFERENCE.md  SERVICE_MANAGEMENT.md  SETUP.md  SETUP_ANALYSIS.md  TESTING.md  Task.md  Tool.md  (+6 more)
(+473 files in other folders)
